fixed color issues on mobile

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -80,6 +80,7 @@ nav {
 
 // Fixing dropdown width
 .dropdown-content {
+    background-color: rgba(255, 255, 255, 0.9);
     width: fit-content !important;
 }
 
@@ -738,7 +739,6 @@ footer {
             margin-top: 0;
             margin-bottom: 20px;
             text-align: center;
-            color: #000000 !important;
             padding: 5px !important;
         }
     }
@@ -749,6 +749,9 @@ footer {
         margin: 50px;
         padding: 0;
 
+    }
+    .landing-intro {
+        color: #000000 !important;
     }
 }
 
